--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Hunter Wilds</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
-<header>
-    <video src="video/Presentation.mp4" autoplay muted></video>
-    <div class ="logoHeader">
-        <img class="imgHeader" src="img/Monster_Hunter_Wilds_Logo.png" alt="Logo du jeux vidéo Hunter Monster Wilds">
-    </div>
+    <header>
+        <video src="video/Presentation.mp4" autoplay muted></video>
+        <div class="logoHeader">
+            <img class="imgHeader" src="img/Monster_Hunter_Wilds_Logo.png"
+                alt="Logo du jeux vidéo Hunter Monster Wilds">
+        </div>
 
-</header>
+    </header>
+    <main>
+        
+        <section class="chasseOuverte">
+            <h2>LA CHASSE EST OUVERTE</h2>
+            <div class="divArkveld"><img src="img/arkveld.png" alt="image du monstre arkveld" class="imgArkveld"></div>
+            <article class = "articleArkveld">
+                <h3>LA ZONE INTERDITE EST A PORTEE</h3>
+                <p>Dans Monster Hunter Wilds, les Terres orientales constituent une région riche en ressources rares et
+                    en biodiversité. Les chasseurs y explorent des environnements variés, tels que les Plaines venteuses
+                    et la Forêt écarlate, à la recherche de matériaux précieux comme le Pollen de fleur de lune,
+                    essentiel pour améliorer leur équipement. Ces zones sont également le territoire de monstres
+                    redoutables, notamment le Rey Dau, une wyverne volante dominante des Plaines venteuses, et la Lala
+                    Barina, une créature arachnide qui rôde dans la Forêt écarlate. Les chasseurs doivent s'adapter aux
+                    conditions climatiques dynamiques et aux cycles jour/nuit, qui influencent le comportement des
+                    créatures et la disponibilité des ressources. Le village de Kunafa, niché au cœur des Plaines
+                    venteuses, sert de base d'opérations aux chasseurs, offrant des services essentiels et des montures
+                    Seikrets pour faciliter leurs expéditions</p>
+            </article>
+        </section>
+
+    </main>
 
 
 
 
-    
+
 </body>
+
 </html>
