--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     </header>
     <main>
-        
+
         <section class="chasseOuverte">
             <h2>LA CHASSE EST OUVERTE</h2>
-            <div class="divArkveld"><img src="img/arkveld.png" alt="image du monstre arkveld" class="imgArkveld"></div>
-            <article class = "articleArkveld">
+            <div class="divArkveld"><img src="img/arkveld.png" alt="image du monstre arkveld"></div>
+            <article class="articleArkveld">
                 <h3>LA ZONE INTERDITE EST A PORTEE</h3>
                 <p>Dans Monster Hunter Wilds, les Terres orientales constituent une région riche en ressources rares et
                     en biodiversité. Les chasseurs y explorent des environnements variés, tels que les Plaines venteuses
@@ -36,6 +36,47 @@
                     Seikrets pour faciliter leurs expéditions</p>
             </article>
         </section>
+        <section class="sectionNouvellesMenaces">
+            <h2 class="h1NouvellesMenace">NOUVELLE MENACES</h2>
+            <video src="video/Balahara.mp4" autoplay muted></video>
+
+            <div class="balara"><img src="img/balahara.png" alt="image du balahara dans le jeu monster hunter wilds">
+            </div>
+            <article class="articleMenace">
+                <h3 class=h3Wyernes>LA WYWERNE DES SABLES</h3>
+                <p class="pWyernes">Le Balahara est un Léviathan introduit dans Monster Hunter Wilds, reconnaissable à
+                    son corps serpentin et souple, recouvert de petites écailles brun-grisâtre qui s'élargissent sur les
+                    côtés. Il possède quatre pattes courtes et une longue queue en forme de foret. Sa tête distincte
+                    présente des mâchoires tripartites avec trois langues, ornées de dents ressemblant à des lames de
+                    scie, et une lueur bleue émane de l'intérieur de sa bouche.</p>
+            </article>
+        </section>
+        <section class="endGame">
+            <h2>CONTENU END-GAME</h2>
+            <video src="video/Hirabami.mp4" autoplay muted></video>
+            <div class="hirabami" ><img src="img/hirabami.webp" alt="image du monstre hirabami dans le jeu monster hunter wilds"></div>
+            <article class="caVol">
+                <h3>CA VOLE C'EST CHIANT</h3>
+                <p>L'Hirabami est un Léviathan introduit dans Monster Hunter Wilds, caractérisé par une morphologie
+                    unique rappelant celle du Somnacanth. Son corps est principalement de couleur violet foncé avec des
+                    nuances de cyan. Sa tête pointue est couverte de plaques segmentées, et sa mâchoire inférieure peut
+                    se diviser en deux. L'intérieur de sa bouche est vivement coloré, et il possède deux petits yeux
+                    blancs dépourvus de pupilles. Une large membrane s'étend des côtés de sa tête le long de son corps,
+                    lui permettant de planer gracieusement dans les airs.</p>
+            </article>
+
+        </section>
+        <section class="biomes">
+            <h2>BIOMES ETENDUS ET VIVANTS</h2>
+            <video src="video/RayDau.mp4" autoplay muted ></video>
+            <div class="imgRaydau"><img src="img/rayDau.png" alt="Image de Raydau dans le jeu Monster Hunter Wilds"></div>
+            <article class = "articleRaydau">
+                <h3>IL CRACHE DES ECLAIRS, C'EST CHIANT AUSSI</h3>
+                <p>Son corps est recouvert d'écailles dorées osseuses, avec des écailles noires plus petites sur le ventre, les articulations et les ailes. Contrairement à la plupart des autres wyvernes bipèdes, ses ailes ne sont pas composées de doigts allongés, mais d'une seule membrane semblable à celle des ptérosaures, avec des protubérances tranchantes utilisées comme armes.</p>
+            </article>
+
+        </section>
+
 
     </main>
 
